# tape-mem

./: .envrc  .gitignore  AGENTS.md  README.md  devenv.nix  evaluate_longmem.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  quality.yml
devenv/: jupyter-notebook.nix  markdown-fmt.nix
devenv/astral/: default.nix  ruff-format.nix  ruff-lint.nix  ty.nix  uv-export.nix
docs/: dataset.md  index.md  usage.md
docs/dataset/: accurate_retrieval_scalability.md  overview.md
docs/development/: setup-python.md
experiments/: eventqa_65536_1_result.json  full_agent_eventqa_131072_0_result.json  full_agent_eventqa_65536_0_result.json  rag_agent_eventqa_131072_0_result.json  rag_agent_eventqa_131072_1_result.json  rag_agent_eventqa_65536_0_result.json  rag_agent_longmemeval_0_result.json  tape_agent_eventqa_131072_0_result.json  tape_agent_eventqa_65536_0_result.json  tape_agent_longmemeval_0_result.json
notebooks/: datasets.ipynb  tape.ipynb
src/tape_mem/agents/: __init__.py  full_context.py  rag.py  tape.py
src/tape_mem/chunker/: __init__.py  sentence_aware.py
src/tape_mem/dataset/: __init__.py  eventqa.py  longmemeval.py  templates.py
src/tape_mem/evaluation/: __init__.py
src/tape_mem/types/: __init__.py  (+7 more)
src/tape_mem_cli/: __main__.py
tape_mem/: __main__.py
tape_mem/agents/: full_context.py
tape_mem/datasets/: eventqa.py  templates.py
tape_mem/evaluation/: candidate_match.py
tape_mem/llm/: openai.py
tape_mem/types/: __init__.py  agent.py  conversation.py
tests/: test_candidate_match_evaluator.py  test_chunk.py  test_conversation_serialization.py  test_eventqa_dataset.py  test_longmemeval_dataset.py  test_templates.py
tests/__snapshots__/: test_conversation_serialization.ambr  test_eventqa_dataset.ambr  test_longmemeval_dataset.ambr  test_templates.ambr
(+4 files in other folders)
