[project]
name = "tape-mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["datasets>=4.8.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tape_mem"]

[tool.uv]
package = true

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "ruff>=0.15.7",
  "ty>=0.0.24",
  "zensical>=0.0.29",
  "pytest>=9.0.2",
  "syrupy>=5.1.0",
]
