[project]
name = "tape-mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "datasets>=4.8.4",
  "loguru>=0.7.3",
  "mashumaro>=3.20",
  "nltk>=3.9.4",
  "openai>=2.30.0",
  "pydantic-settings>=2.13.1",
  "tiktoken>=0.12.0",
]

[tool.uv]
package = true
exclude-newer = "7 days"

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "ruff>=0.15.7",
  "ty>=0.0.24",
  "zensical>=0.0.29",
  "pytest>=9.0.2",
  "syrupy>=5.1.0",
]

[project.scripts]
tape-mem = "tape_mem_cli.__main__:main"
