[project]
name = "tape-mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "click>=8.3.1",
  "datasets>=4.8.4",
  "loguru>=0.7.3",
  "mashumaro>=3.20",
  "mirascope @ git+https://github.com/Devin-Yeung/mirascope@fix-model-id#subdirectory=python",
  "nltk>=3.9.4",
  "openai>=2.30.0",
  "pydantic-settings>=2.13.1",
  "questionary>=2.1.1",
  "rich>=14.3.3",
  "tiktoken>=0.12.0",
  "tqdm>=4.67.3",
]

[tool.uv]
package = true
exclude-newer = "7 days"

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "ruff>=0.15.7",
  "ty>=0.0.24",
  "zensical>=0.0.29",
  "pytest>=9.0.2",
  "syrupy>=5.1.0",
]

[project.scripts]
tape-mem = "tape_mem_cli.__main__:main"
